# jwt-decoder

./: Cargo.toml  build.sh  readme.md
src/: cli.rs  main.rs  model.rs
