[package]
name = "jwt-decode"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.21.0"
chrono = "0.4.24"
colored = "2.0.0"
json = "0.12.4"

[profile.static]
inherits = "release"
opt-level = "z"
debug = false
split-debuginfo = "unpacked"
debug-assertions = false
overflow-checks = false
strip = "debuginfo"
lto = "fat"
panic = 'unwind'
incremental = false
codegen-units = 16
rpath = false
